--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,7 @@
          <plugin>
           <groupId>org.apache.sling</groupId>
           <artifactId>maven-sling-plugin</artifactId>
+          <version>2.0.6</version>
           <executions>
             <execution>
               <id>install-bundle</id>
