--- a/provision/pom.xml
+++ b/provision/pom.xml
@@ -112,7 +112,7 @@
       <groupId>org.apache.jackrabbit</groupId>
       <artifactId>jackrabbit-api</artifactId>
       <version>2.1.1</version>
-      <scope>testing</scope>
+      <scope>test</scope>
     </dependency>
 
 <!-- commons -->
