--- a/migrators/pom.xml
+++ b/migrators/pom.xml
@@ -60,6 +60,10 @@
     </dependency>
     <dependency>
       <groupId>org.apache.sling</groupId>
+      <artifactId>org.apache.sling.api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.sling</groupId>
       <artifactId>org.apache.sling.commons.json</artifactId>
     </dependency>
   </dependencies>
