--- a/pom.xml
+++ b/pom.xml
@@ -451,7 +451,7 @@
       <dependency>
         <groupId>org.sakaiproject.nakamura</groupId>
         <artifactId>org.sakaiproject.nakamura.core</artifactId>
-        <version>1.3.4</version>
+        <version>1.3.4.1-SNAPSHOT</version>
         <scope>provided</scope>
       </dependency>
       <dependency>
