--- a/launchpad/pom.xml
+++ b/launchpad/pom.xml
@@ -92,7 +92,7 @@
             </bundle>
             <bundle>
               <groupId>edu.berkeley.myberkeley</groupId>
-              <artifactId>edu.berkeley.myberkeley.foreignprincipal</artifactId>
+              <artifactId>org.sakaiproject.nakamura.accountprovider</artifactId>
               <version>${project.version}</version>
               <startLevel>30</startLevel>
             </bundle>
